Añadir color selected-text y black bg

--- a/chrome/components/ch_root_personal.css
+++ b/chrome/components/ch_root_personal.css
@@ -14,9 +14,9 @@
   --searchbar-on-off: 1 ;                                                                    /* :1 visible, :0 invisible ; searchbar*/
   --searchbar-display: flex ;                                                                /* :none ->eliminar , :flex ->Mostrar; searchbar*/
   
-  --newtab-pinnedsites-background: color-mix(in srgb, white 5%, transparent) ;               /* color - fondo de sitios fijados y barra de búsqueda*/
+  --newtab-pinnedsites-background: color-mix(in srgb, white 5%, transparent);               /* color - fondo de sitios fijados y barra de búsqueda*/
   
-  --selected-text-background: var(--button-active-bgcolor1);                                 /* Selected text background */
+  --selected-text-background: #c82fe2;                                 /* Selected text background */
   
   --personal-blur: blur(26px) ;                                                              /* Utilizado para personalizar userContent.css */
   
