--- a/chrome/components/ch_userContent-personal.css
+++ b/chrome/components/ch_userContent-personal.css
@@ -38,7 +38,7 @@ body {
     /*-------------------------------eliminar la linea 39 al usar temas incompletos-----------------------------------------------------------------*/
     --newtab-background-color: color-mix(in srgb, var(--lwt-sidebar-background-color, FieldText) 95%, black ) !important;          
 
-    --newtab-background-color-secondary: var(--newtab-pinnedsites-background)  !important;                                      /*fondo de sitios fijados*/
+    --newtab-background-color-secondary: rgba(0, 0, 0, 0.75)  !important;                                      /*fondo de sitios fijados*/
     
     --newtab-contextmenu-background-color: red !important;                                                                      /*contextual menu de tres puntos pinned*/   
     --newtab-element-hover-color: var(--newtab-background-color-secondary) !important;                                          /*color de fondo al hacer clic al menú 3 puntos*/
@@ -86,7 +86,7 @@ body {
     backdrop-filter: var(--personal-blur) !important;}
     
 /*fondo y borde del menú de 3 puntos, linea separadora*/
-.context-menu {background-color: var(--newtab-background-color) !important; color: var(--newtab-wordmark-color) !important;
+.context-menu {background: var(black) !important; color: var(--newtab-wordmark-color) !important;
  box-shadow: 0px 0px 3px #00000070, 0px 0px 6px var(--newtab-background-color) !important; border: 1px solid var(--newtab-border-color)}
 .context-menu .separator{margin-left: 5px !important; margin-right: 5px !important; width: -moz-available !important;}
     
@@ -100,7 +100,7 @@ body {
     
 /* Cuadro de búsqueda*/
 .search-inner-wrapper{
-    background: color-mix(in srgb, var(--newtab-pinnedsites-background) 8%, transparent) !important;
+    background: var(--newtab-background-color) !important;
     opacity: var(--searchbar-on-off, 1) !important;
     display: var(--searchbar-display, flex) !important; }
 .search-wrapper .search-handoff-button{ 
@@ -139,7 +139,7 @@ body {
     border: 1px solid #6a6a6b3a !important; box-shadow: 2px 2px 2px var(--newtab-background-color) !important;}
   
 /*Colores de la sidebar para Personalizar la NewTab*/
-.customize-menu {color: var(--newtab-wordmark-color) !important; background-color: color-mix( in srgb, var(--newtab-background-color) 95%, var(--newtab-wordmark-color) ) !important;}
+.customize-menu {color: var(--newtab-wordmark-color) !important; background-color: rgba(0, 0, 0, 0.75) !important; overflow-x: hidden;}
 .home-section .section .selector {background-color: color-mix( in srgb, var(--newtab-background-color) 98%, white ) !important; border: 1px solid color-mix( in srgb, var(--newtab-background-color) 90%, var(--newtab-wordmark-color) ) !important;
     box-shadow:  none !important;}
 .customize-menu.customize-animate-enter-done, .customize-menu.customize-animate-enter-active {
@@ -148,7 +148,7 @@ body {
 *{scrollbar-width: none !important }
  
 /*colores de los sitios anclados*/
-.top-site-outer .tile{ background-color: var( --newtab-background-color-secondary)!important;
+.top-site-outer .tile{ background-color: transparent !important;
     box-shadow: 0px 0px 1px #00000090 !important; backdrop-filter: var(--personal-blur) !important;}  
     
 /*colores al pasar el mouse sobre los sitios anclados en :hover*/
