--- a/chrome/components/ch_userContent-personal.css
+++ b/chrome/components/ch_userContent-personal.css
@@ -215,7 +215,7 @@ panel-list {background:color-mix(in srgb, var(--in-content-page-background)86%, 
 
 /*Color fondo y letra al seleccionar texto*/
 ::selection {
-    color: black !important;
+    color: #fff !important;
     background: var(--selected-text-background) !important;
 }
 
